[gd_scene load_steps=19 format=3 uid="uid://bsjwh0brx6fdc"]

[ext_resource type="Script" path="res://scripts/potion.gd" id="1_nq15k"]
[ext_resource type="Texture2D" uid="uid://c2hd627gafe1r" path="res://assets/sprites/four-seasons-tileset.png" id="3_8elh2"]
[ext_resource type="Texture2D" uid="uid://btweq8tu2x0s1" path="res://assets/sprites/purple-fluid.png" id="4_37q1g"]
[ext_resource type="AudioStream" uid="uid://dvjpytegf2qpx" path="res://assets/sounds/Harp 1 (Ascending).wav" id="4_dhtrc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fj113"]
size = Vector2(12, 16)

[sub_resource type="Animation" id="Animation_g38so"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Bottle:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Bottle:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Bottle:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_3m5k8"]
resource_name = "fade_out"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Bottle:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(2.5, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(4, 0), Vector2(4, 4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Bottle:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2.5, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_e4v4o"]
resource_name = "fall"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Bottle:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.5708]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lxoup"]
_data = {
"RESET": SubResource("Animation_g38so"),
"fade_out": SubResource("Animation_3m5k8"),
"fall": SubResource("Animation_e4v4o")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_dhnwy"]
atlas = ExtResource("4_37q1g")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jnjg2"]
atlas = ExtResource("4_37q1g")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_in5ip"]
atlas = ExtResource("4_37q1g")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1gjf2"]
atlas = ExtResource("4_37q1g")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xvm27"]
atlas = ExtResource("4_37q1g")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mj8wq"]
atlas = ExtResource("4_37q1g")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_j8a4y"]
atlas = ExtResource("4_37q1g")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l54k4"]
atlas = ExtResource("4_37q1g")
region = Rect2(112, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_gkyos"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhnwy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jnjg2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_in5ip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1gjf2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xvm27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mj8wq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j8a4y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l54k4")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[node name="Potion" type="Node2D"]
script = ExtResource("1_nq15k")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(4, 0)
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-4, -8)
shape = SubResource("RectangleShape2D_fj113")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Area2D")
libraries = {
"": SubResource("AnimationLibrary_lxoup")
}

[node name="AnimatedFluid" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(22, -8)
sprite_frames = SubResource("SpriteFrames_gkyos")

[node name="Bottle" type="Node2D" parent="."]
position = Vector2(4, 0)

[node name="Sprite2D" type="Sprite2D" parent="Bottle"]
position = Vector2(-4, -7)
texture = ExtResource("3_8elh2")
region_enabled = true
region_rect = Rect2(116, 130, 8, 14)

[node name="AudioHarp" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_dhtrc")
bus = &"EXF"

[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="Area2D" method="_on_animation_player_animation_finished"]
